# shiny-memory

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: colors.rs  delayed_response.rs  main.rs  prediction.rs  utils.rs  video.rs
crates/tools/: Cargo.toml
