[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
axum = "0.6"
futures-util = "0.3.28"
hyper = "0.14.25"
image = "0.24.6"
imageproc = "0.23.0"
reqwest = { version = "0.11.16", features = ["stream"] }
rusttype = "0.9.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio-util = { version = "0.7.7", features = ["io"] }
ndarray = "0.15.6"
fast_image_resize = "2.7.0"

[target.'cfg(windows)'.dependencies.ort]
version = "1.14.6"

[target.'cfg(windows)'.dependencies.ffmpeg-next]
version = "6.0.0"
default-features = false
features = ["codec", "format", "software-scaling"]

[target.'cfg(not(windows))'.dependencies.ort]
version = "1.14.6"
default-features = false
features = ["half", "load-dynamic"]

[target.'cfg(not(windows))'.dependencies.ffmpeg-next]
version = "6.0.0"
default-features = false
features = ["static", "codec", "format", "software-scaling", "build"]

